--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>    
         <div class="collapse" id="collapseExample">
                  <div class="card card-body">
-                   Hello , I am anjit pariyar. please dont refresh the page. otherwise all your data will be lost. Arigatou gozaimus
+                   Hello , I am anjit pariyar.use + icon to add your Remainder. please dont refresh the page. otherwise all your data will be lost. Arigatou gozaimus
                  </div>
          </div>
 
